--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,6 @@
 			Teal: #1D9089
 			Dark blue: #182F3F          */
 
-.gradient {
-  background-image:
-    radial-gradient(
-      #65326D,
-      #280F36);
-}
-
-
 
 h1 { 
 	font-family: 'Laila', serif;
@@ -23,15 +15,25 @@ h1 {
 }
 
 body {
+	background: #65326D url("../img/dark-wood.png");
 	color: #B9EFEF;
 	padding: 10px;
 	border: 30px;
 	margin: 50px 100px 100px 100px;
 }
 
+
 /*********CSS EXAMPLES***************
 
 url("../img/dark-wood.png") repeat;
+
+body {
+    background: #6DB3F2  url('http://wizzley.com/static/img/bg/texture8.png');
+}
+
+radial-gradient(
+      #65326D,
+      #280F36);
 
 h1 {
 	color: white;
