--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ nav a {
 }
 
 nav ul li a {
+	font-family: 'Questrial', sans-serif;
 	list-style: none;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -75,6 +76,33 @@ li a {
 	padding: 20px;
 }
 
+nav a { color: #182F3F;} 
+nav a:hover { color: #B9EFEF;} 
+
+p { color: #65326D;
+	font-family:'Questrial', sans-serif;
+	font-size: 1.5em;
+	text-align: center;
+	
+
+	
+
+}
+
+#bio {
+	display: block;
+	margin: 30px;
+	border: 50px 20px;
+	max-width: 100%;
+}
+
+
+#picture {
+	display: block;
+	max-width: 125%;
+	margin: 30px;
+	border-radius: 20px;
+}
 
 
 
