--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ h3 {
 	font-size: 2em;
 	text-align: center;
 	float: center;
-	margin-left: -200px;
+	
 
 }
 
@@ -99,8 +99,7 @@ p {font-family:'Questrial', sans-serif;
 	color: #65326D;
 	font-family:'Questrial', sans-serif;
 	font-size: 1.6em;
-	margin: 60px 30px 30px 30px;
-	border: 50px 20px;
+	
 	max-width: 100%;
 	letter-spacing: .5px;
 }
@@ -125,15 +124,11 @@ p {font-family:'Questrial', sans-serif;
 #picture {
 	display: block;
 	max-width: 125%;
-	margin: 30px;
+	
 	border-radius: 20px;
 }
 
-#vids {
-	max-height: 200%;
-	float: center;
-	margin-left: 200px;
-}
+
 
 
 .embedly-embed {
@@ -146,8 +141,16 @@ p {font-family:'Questrial', sans-serif;
 	float: center;
 	text-transform: uppercase;
 	max-width: 100%;
-	margin-left: 200px;
+	
 
+}
+
+.poodle {
+	margin: 0 auto;
+	max-width: 100%;
+	position: relative;
+	text-align: center;
+	float: center;
 }
 
 
